--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
     <div class="container"></div>
   </body>
   <script src="/bundle.js"></script>
+  <!-- bootstrap tooltips -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.3.2/js/tether.min.js"></script>
+  <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('[data-toggle="tooltip"]').tooltip();
+    });
+  </script>
   </script>
 </html>
